@@ -1,6 +1,7 @@
 Current Version: @VERSION@
 
 ctags-@VERSION@ (@DATE@)
+* Fixed bug where functions were sometimes seen as methods [Python, Bug #1988026].
 * Added support for VHDL [VHDL, Bug #1943306].
 * Added regex support when compiling with MinGW. Gnu regex module now included in all distributions.
 * Added support for class and member variables [PHP, Bug #1037086].
